# CycleProject

./: .gitignore  CMakeLists.txt  PROJECT_RULES.md  README.md  build.py  lines.py  reset.py
Catch2/: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
cycle/: build.cmake
cycle/app/: build.cmake  main.cpp
cycle/compiler/: build.cmake
include/: LLVM.hpp  OS.hpp  colors.hpp  errors.hpp  module.hpp  type.hpp  utils.hpp  value.hpp  value.tpp  write.hpp
include/Builders/: parser.hpp
include/Common/: colors.hpp  errors.hpp  math.hpp  numerics.hpp  numerics.tpp  system.hpp  thread_pool.hpp  utils.hpp  write.hpp
include/HIR/: module.hpp  scope.hpp  type.hpp  value.hpp  value.tpp
include/HIR/Nodes/: node.hpp  scope.hpp
include/HIR/Symbols/: symbol.hpp
include/Nodes/: node.hpp  scope.hpp
include/Symbols/: symbol.hpp
src/: CMakeLists.txt  colors.cpp  errors.cpp  main.cpp  module.cpp  type.cpp  value.cpp  write.cpp
src/Builders/: lexer.cpp  parser.cpp
src/Common/: colors.cpp  errors.cpp  thread_pool.cpp  write.cpp
src/HIR/: module.cpp  scope.cpp  type.cpp  value.cpp
src/HIR/Nodes/: scope.cpp
src/HIR/Symbols/: symbol.cpp
src/Nodes/: scope.cpp
src/Symbols/: symbol.cpp
tests/: CMakeLists.txt  main.cpp  system.cpp  value.cpp
